--- a/app/src/main/res/layout/activity_level_board.xml
+++ b/app/src/main/res/layout/activity_level_board.xml
@@ -52,8 +52,8 @@
             android:id="@+id/game_board"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/p1"
-            android:layout_weight="1"/>
+            android:layout_marginBottom="100dp"
+            android:layout_marginTop="10dp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
